--- a/src/components/Posts/AddPost.module.css
+++ b/src/components/Posts/AddPost.module.css
@@ -1,4 +1,5 @@
 .footer {
+  /* justify-content: space-around; */
   position: sticky;
   bottom: 0%;
   padding-bottom: 0.3125rem;
@@ -18,3 +19,4 @@
   color: #fff;
   cursor: pointer;
 }
+
