--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -1,8 +1,13 @@
+.mainDiv {
+  height: 100vh;
+}
 
 .footer {
-  position: sticky;
+  position: fixed;
+  min-width: 100%;
+  height: 3rem;
   bottom: 0%;
-  padding-bottom: 0.3125rem;
+  padding-bottom: 1rem;
   display: block;
   background: #fff;
   text-align: center;
@@ -20,20 +25,52 @@
   cursor: pointer;
 }
 
-.loadButton{
+.loadButton {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.loadButton button{
+.loadButton button {
   min-width: 4rem;
   height: 2rem;
   background: linear-gradient(202.17deg, #ff00d6 8.58%, #ff4d00 91.42%);
   border: transparent;
   border-radius: 1.2rem;
   color: #fff;
-  font-family: 'Comfortaa';
+  font-family: "Comfortaa";
   font-size: 0.8rem;
   cursor: pointer;
+}
+
+.searchBar {
+  display: flex;
+  align-items: center;
+  border: 0.1rem solid #000;
+  border-radius: 1rem;
+  gap: 0.3rem;
+  padding: 0.1rem;
+}
+.searchIcon {
+  display: flex;
+  align-items: center;
+  border-right: 0.1rem solid #000;
+}
+
+.searchIcon img {
+  width: 1.4rem;
+  height: 1.4rem;
+}
+
+.searchInput{
+  display: flex;
+  align-items: center;
+}
+
+.searchInput input {
+  border: transparent;
+}
+
+.searchInput input:focus {
+  outline: none;
 }
